# AWS_GenAI_Platform_DEMO

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
aws/: config.example
docs/: agentcore-enterprise-bottlenecks.md  ci-cd.md  onboarding.md
docs/superpowers/plans/: 2026-06-13-knowledge-assistant-platform.md
docs/superpowers/specs/: 2026-06-13-knowledge-assistant-platform-design.md  2026-06-13-pii-safe-invoice-platform-design.md
scripts/: onboard.sh  run_tf_tests.sh
terraform/: .terraform.lock.hcl  .tflint.hcl  backend.tf  dev.tfvars  main.tf  providers.tf  variables.tf
terraform/bootstrap/: main.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/network/tests/: network.tftest.hcl
terraform/modules/security/: main.tf  outputs.tf
terraform/modules/security/tests/: security.tftest.hcl
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/tests/: storage.tftest.hcl
terraform/tests/: foundation.tftest.hcl
tests/: test_project_layout.py
