[project]
name = "genai-ka"
version = "0.1.0"
requires-python = ">=3.12"

# Note: add "services" here once the application code lands (plan phases 4-6).
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
